# CI_CD-pipeline

./: README.md
.github/workflows/: ci.yml  release.yml
CI_CD_Test/: .gitignore  CMakeLists.txt  OldCMakeLists.txt
CI_CD_Test/.github/workflows/: ci.yml  release.yml
CI_CD_Test/src/: CMakeLists.txt  headunitapp.cpp  headunitapp.h  main.cpp
CI_CD_Test/src/qml/: Dashboard.qml  Main.qml
CI_CD_Test/src/qml/components/: SpeedGauge.qml
CI_CD_Test/tests/: CMakeLists.txt  sample_test.cpp  tst_sanity.qml
